Warnings printed to console from new GStreamer code

XMLWordPrintable

    • 9

      To reproduce this, run any media program, for example, the Advanced Media demo in Ensemble8, on Mac or Linux. The following warnings will be printed to the console:

      ** (process:86189): WARNING **: 0.10-style raw video caps are being created. Should be video/x-raw,format=(string).. now.

      ** (process:86189): WARNING **: 0.10-style raw video caps are being created. Should be video/x-raw,format=(string).. now.

      ** (process:86189): WARNING **: 0.10-style raw video caps are being created. Should be video/x-raw,format=(string).. now.

            Assignee:
            Alexander Matveev
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: