8136480: Warnings printed to console from new GStreamer code

Reviewed-by: stayer